# velo3

./: .gitignore  README.md  pyproject.toml
front/: index.html  package-lock.json  package.json
front/src/: App.vue  axios.js  constants.js  main.js  store.js
front/src/assets/: main.css
front/src/router/: index.js
front/src/views/: BicycleCreateView.vue  BicycleDetailView.vue  BicycleEditView.vue  BicycleLogBookFullView.vue  BicyclesView.vue  HomeView.vue  LogBookRecordCreate.vue  LogBookRecordCreateView.vue  LogBookRecordDetailView.vue  LogBookRecordEdit.vue  LogBookRecordEditView.vue  LogBookRecordsView.vue  NotFound.vue  NotFoundView.vue  ProfileDetailView.vue  ProfileEditView.vue  UserLogInView.vue  UserRegistrationView.vue
velo3_project/: manage.py
velo3_project/logbooks/: apps.py
velo3_project/src/: api_urls.py  routers.py
velo3_project/src/bicycles/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
velo3_project/src/logbooks/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
velo3_project/src/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
velo3_project/static/: app.js
velo3_project/templates/: bicycles.html  index.html  profile.html
velo3_project/velo3_project/: asgi.py  settings.py  urls.py  wsgi.py
velo_backend/conf/: asgi.py  settings.py  urls.py  wsgi.py
velo_backend/src/: api_urls.py
velo_backend/src/bicycles/: admin.py  models.py  serializers.py  urls.py  views.py
velo_backend/src/logbooks/: admin.py  apps.py  models.py  serializers.py  views.py
(+16 files in other folders)
